Added ui for hammerbarn
