# src/api/routes/listings.js
@@ -4,7 +4,7 @@ var router = express.Router();
 const ProductSearch = require('../helper/searchProducts');
 
 /* GET listings. */
-router.get('/', async function (req, res, next) {
+router.get('/search', async function (req, res, next) {
   const query = req.query.query ? req.query.query.trim() : null;
 
   try {
@@ -18,6 +18,21 @@ router.get('/', async function (req, res, next) {
 
     res.setHeader("Content-Type", "application/json");
     res.send(listings);
+
+  } catch (e) {
+    res.status(400).send({ error: e.message });
+  }
+});
+
+router.get('/product/:id', async function (req, res, next) {
+  const id = req.params.id;
+
+  try {
+    const productSearch = new ProductSearch();
+    const product = await productSearch.getProduct(id);
+
+    res.setHeader("Content-Type", "application/json");
+    res.send(product);
 
   } catch (e) {
     res.status(400).send({ error: e.message });
